--- a/index.htm
+++ b/index.htm
@@ -10,12 +10,17 @@
     var overallHeight = 100;
     var extraTextSpacing = 5;
     var outerColor = "#0000aa";
-    var rangeColor = "#00aa00";
-    var textColor = "#666666";
+    var gradientOuterColor = "rgb(0,180,240)";
+    var gradientInnerColor = "rgb(77,255,255)"
+    var textColor = "#444444";
+    var managerColor = "rgb(0,180,0)";
+    var selfColor = "rgb(108,108,108)";
     var maxI = 10;
     var fontSize = 15;
+    var attribute = "";
 
-    function draw() {
+    function draw(_attribute) {
+       attribute = _attribute;
        rect(overallMargin,overallMargin,0, overallWidth,overallHeight,outerColor,false);
        var peerAverage = getPeerAverage();
        console.log("peerAverage: " + peerAverage);
@@ -28,13 +33,41 @@
        var xOffset = getNumericMargin(getPeerLow()) + fontSize/3;
        var width = getNumericMargin(getPeerHigh()) - getNumericMargin(getPeerLow());
        var height = 30;
-       rect(xMargin, yMargin, xOffset, width, height, rangeColor, true);
+       rect(xMargin, yMargin, xOffset, width, height, "", true);
        text();
+       drawMarkerLine(getManagerRating(),managerColor);
+       drawMarkerLine(getSelfRating(),selfColor);
 
     }
 
+    function drawMarkerLine(rating,color) {
+      var x = getNumericMargin(rating) + fontSize/3;
+      console.log("managerRating: " + rating);
+      var canvas = document.getElementById(attribute + "Canvas");
+      if (canvas.getContext) {
+        var ctx = canvas.getContext("2d");
+        ctx.fillStyle = color;
+        ctx.strokeStyle = color;
+        ctx.lineWidth = 3;
+        ctx.beginPath();
+        ctx.moveTo(x, overallMargin + 10);
+        ctx.lineTo(x, 75);
+        ctx.stroke();
+      }
+    }
+
+    function getManagerRating() {
+      var managerRating = document.getElementById(attribute + "ManagerRating").value;
+      return parseInt(managerRating);
+    }
+
+    function getSelfRating() {
+      var selfRating = document.getElementById(attribute + "SelfRating").value;
+      return parseInt(selfRating);
+    }
+
     function getPeerAverage() {
-      var peerValues = document.getElementById("peerValues").value;
+      var peerValues = document.getElementById(attribute + "PeerRatings").value;
       var peerArray = peerValues.split(",");
       var total = 0.0;
       peerArray.map(function(peerValue) {
@@ -44,19 +77,19 @@
     }
 
     function getPeerHigh() {
-      var peerValues = document.getElementById("peerValues").value;
+      var peerValues = document.getElementById(attribute + "PeerRatings").value;
       var peerArray = peerValues.split(",");
       return Math.max.apply(Math, peerArray);
     }
 
     function getPeerLow() {
-      var peerValues = document.getElementById("peerValues").value;
+      var peerValues = document.getElementById(attribute + "PeerRatings").value;
       var peerArray = peerValues.split(",");
       return Math.min.apply(Math, peerArray);
     }
 
     function text() {
-      var canvas = document.getElementById("canvas");
+      var canvas = document.getElementById(attribute + "Canvas");
       if (canvas.getContext) {
         var ctx = canvas.getContext("2d");
         ctx.fillStyle=textColor;
@@ -65,6 +98,7 @@
           ctx.fillText(i,getNumericMargin(i),overallHeight);
           console.log("writing " + i + " at " + getNumericMargin(i));
         }
+        ctx.fillText(attribute,getNumericMargin(1),overallMargin+embeddedYMargin);
       }
     }
 
@@ -74,7 +108,7 @@
 
     function rect(xMargin,yMargin,x, width,height,color,fill) {
       console.log("rect at " + (xMargin+x) + " , " + width+", " + height);
-      var canvas = document.getElementById("canvas");
+      var canvas = document.getElementById(attribute + "Canvas");
       if (canvas.getContext) {
         var ctx = canvas.getContext("2d");
 
@@ -89,9 +123,9 @@
 
           var colorSpikeStop = (getPeerAverage() - getPeerLow()) / (getPeerHigh() - getPeerLow());
 
-          gradient.addColorStop(0, '#006600');
-          gradient.addColorStop(colorSpikeStop, '#00ff00');
-          gradient.addColorStop(1.0, '#006600');
+          gradient.addColorStop(0, gradientOuterColor);
+          gradient.addColorStop(colorSpikeStop, gradientInnerColor);
+          gradient.addColorStop(1.0, gradientOuterColor);
 
           ctx.fillStyle = gradient;
           ctx.fillRect (xMargin+x,yMargin,width,height);
@@ -104,10 +138,13 @@
   </script>
 </head>
 
-<body onload="draw();">
-  <canvas id="canvas" width="1100" height="150"></canvas>
-  <br/>
-  <input type="text" value="6,4,9,3" id="peerValues"/><button onclick="draw();">Draw</button>
+<body onload="draw('kind');">
+  Kind - Peer Ratings (CSV): <input type="text" value="6,4,9,3" id="kindPeerRatings"/><br/>
+  Kind - Self Rating: <input type="text" value="7" id="kindSelfRating"/><br/>
+  Kind - Manager Rating: <input type="text" value="4" id="kindManagerRating"/><br/>
+  <button onclick="draw('kind');">Draw</button><br/>
+  <canvas id="kindCanvas" width="1100" height="150"></canvas>
+  <br/><br/>
 </body>
 
 </html>
